Fix mobile layout bug in firefox
This is a bandaid fix, but i believe its actually firefox that has a
bug. For more info, take a look at
https://codepen.io/mrtipson/pen/jOpwojN.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -356,6 +356,7 @@ Changes for mobile
 		grid-template-rows: auto;
 		grid-template-columns: auto;
 		min-width: 300px;
+		height: 600px;
 	}
 	.character > .image {
 		position: absolute;
@@ -368,6 +369,9 @@ Changes for mobile
 		max-width: 100%;
 		max-height: 100%;
 		display: flex;
+	}
+	.image > img {
+		max-width: 100%;
 	}
 	.modal {
 		width: 90%;
